# match-parser

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: main.py
src/match_parser/: __init__.py  handlers.py  repos.py  schemas.py  services.py
