[tool.poetry]
name = "match-parser"
version = "0.1.0"
description = ""
authors = ["Dmitriy <nepich@gmail.com>"]
readme = "README.md"
packages = [{include = "match_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.0.0"
httpx = "^0.24.1"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
fake-useragent = "^1.1.3"
fastapi = "^0.96.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
